Reworked and simplified Pac steering